@@ -11,16 +11,29 @@ group = 'com.github.jbytecode'
 version = '4.0.2'
 description = 'RCaller is a software library which simplifies performing data analysis and statistical calculations in Java using R. The details are hidden from users including transferring data between platforms, function calls, and retrieving results.'
 
+java.sourceCompatibility = JavaVersion.VERSION_11
+
 dependencies {
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    compileOnly 'org.apache.arrow:arrow-vector:[5.0.0,)'
+    implementation 'org.apache.commons:commons-lang3:3.20.0'
+
+    compileOnly 'org.apache.arrow:arrow-vector:[19.0.0,20.0.0)'
 
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.apache.arrow:arrow-vector:[5.0.0,)'
-    testImplementation 'org.apache.arrow:arrow-memory-netty:[5.0.0,)'
+
+    testImplementation 'org.apache.arrow:arrow-vector:[19.0.0,)'
+    testImplementation 'org.apache.arrow:arrow-memory-netty:[19.0.0,)'
+    testImplementation 'org.apache.arrow:arrow-memory-unsafe:[19.0.0,)'
 }
 
-java.sourceCompatibility = JavaVersion.VERSION_11
+test {
+    jvmArgs '-Dio.netty.tryReflectionSetAccessible=true',
+            '-Dio.netty.noUnsafe=true',
+            // Force Apache Arrow to use standard Java APIs instead of Netty
+            '-Darrow.memory.allocation.manager.factory=org.apache.arrow.memory.unsafe.UnsafeAllocationManagerFactory',
+            // Correct the module open target syntax for standard classpaths
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+}
 
 java {
     withSourcesJar()
